k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.127.0.0.1.nip.io
      http:
        paths:
          - path: /dictionary
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8080
